[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["vtheuer"]
edition = "2018"

[lib]
name = "macros"
proc-macro = true
path = "src/macros.rs"

[dependencies]
itertools = "0.9"
fnv = "1"
regex = "1"
colored = "2"
reqwest = { version = "0.11", features = ["blocking"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html