[package]
name = "aoc"
version = "0.1.0"
authors = ["vtheuer"]
edition = "2021"

[lib]
name = "macros"
proc-macro = true
path = "src/macros.rs"

[build]
rustflags = "-Zgcc-ld=lld"

[dependencies]
ahash = "0.8"
regex = "1"
colored = "2"
reqwest = { version = "0.12", features = ["blocking"] }
anyhow = "1.0"
num = "0.4"
serde_json = "1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
